--- a/vagrant/etc/postgresql/9.1/main/pg_hba.conf
+++ b/vagrant/etc/postgresql/9.1/main/pg_hba.conf
@@ -106,6 +106,7 @@ local   all         postgres                          trust
 # "local" is for Unix domain socket connections only
 local   all         all                               trust
 # IPv4 local connections:
-host    all         all         127.0.0.1/32          password
+host    all         postgres    127.0.0.1/32          trust
+host    oberwesel   vagrant     127.0.0.1/32          password
 # IPv6 local connections:
 host    all         all         ::1/128               password
