--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -9,8 +9,7 @@ Vagrant.configure("2") do |config|
   config.vm.box_url = "http://www.digitale-akademie.de/fileadmin/vagrantboxes/wheezy64.box"
 
   config.vm.hostname = "ibr-vagrantbox"
-  config.vm.define "ibr-vagrantbox" do |ibr-vagrantbox|
-  end
+  config.vm.define "ibr-vagrantbox"
 
   config.vm.network :forwarded_port, host: 8080, guest: 80
   config.vm.network :private_network, ip: "10.0.0.24"
