--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,8 +11,10 @@ Vagrant.configure("2") do |config|
   config.vm.hostname = "ibr-vagrantbox"
   config.vm.define "ibr-vagrantbox"
 
-  config.vm.network :forwarded_port, host: 8080, guest: 80
   config.vm.network :private_network, ip: "10.0.0.24"
+
+#  config.vm.network :forwarded_port, host: 80, guest: 80
+  config.vm.network :forwarded_port, host: 8080, guest: 80
 
   config.trigger.after [:provision, :up, :reload] do
     system('echo "
@@ -30,8 +32,8 @@ Vagrant.configure("2") do |config|
 
 	vb.name = "IBR Vagrantbox"
 
-    vb.customize ["modifyvm", :id, "--memory", 2096]
-    vb.customize ["modifyvm", :id, "--cpus", "2"]
+    vb.customize ["modifyvm", :id, "--memory", 1024]
+    vb.customize ["modifyvm", :id, "--cpus", "1"]
 
   end
 
