--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,18 +13,18 @@ Vagrant.configure("2") do |config|
 
   config.vm.network :private_network, ip: "10.0.0.24"
 
-#  config.vm.network :forwarded_port, host: 80, guest: 80
-  config.vm.network :forwarded_port, host: 8080, guest: 80
+  config.vm.network :forwarded_port, host: 80, guest: 80
+#  config.vm.network :forwarded_port, host: 8080, guest: 80
 
-  config.trigger.after [:provision, :up, :reload] do
-    system('echo "
-        rdr pass on lo0 inet proto tcp from any to 127.0.0.1 port 80 -> 127.0.0.1 port 8080 
-    " | sudo pfctl -ef - > /dev/null 2>&1; echo "==> Fowarding Ports: 80 -> 8080 & Enabling pf"')  
-  end
+#  config.trigger.after [:provision, :up, :reload] do
+#    system('echo "
+#        rdr pass on lo0 inet proto tcp from any to 127.0.0.1 port 80 -> 127.0.0.1 port 8080 
+#    " | sudo pfctl -ef - > /dev/null 2>&1; echo "==> Fowarding Ports: 80 -> 8080 & Enabling pf"')  
+#  end
 
-  config.trigger.after [:halt, :destroy] do
-    system("sudo pfctl -df /etc/pf.conf > /dev/null 2>&1; echo '==> Removing Port Forwarding & Disabling pf'")
-  end
+#  config.trigger.after [:halt, :destroy] do
+#    system("sudo pfctl -df /etc/pf.conf > /dev/null 2>&1; echo '==> Removing Port Forwarding & Disabling pf'")
+#  end
 
   ## VM customization ##
 
@@ -32,8 +32,8 @@ Vagrant.configure("2") do |config|
 
 	vb.name = "IBR Vagrantbox"
 
-    vb.customize ["modifyvm", :id, "--memory", 1024]
-    vb.customize ["modifyvm", :id, "--cpus", "1"]
+    vb.customize ["modifyvm", :id, "--memory", 2048]
+    vb.customize ["modifyvm", :id, "--cpus", "2"]
 
   end
 
